--- a/app/src/main/res/layout/activity_manage_friends.xml
+++ b/app/src/main/res/layout/activity_manage_friends.xml
@@ -78,6 +78,13 @@
         app:layout_constraintTop_toBottomOf="@id/linearlayout02"
         android:dividerHeight="1dp"
         android:divider="#e5e5ff"/>
-
-
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/bottom_navigation_menu"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
