--- a/app/src/main/res/layout/activity_manage_socials.xml
+++ b/app/src/main/res/layout/activity_manage_socials.xml
@@ -60,4 +60,14 @@
             android:backgroundTint="#0066ff"
             android:layout_marginVertical="20dp"/>
     </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/bottom_navigation_menu"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
