--- a/app/src/main/res/layout/activity_view_goal.xml
+++ b/app/src/main/res/layout/activity_view_goal.xml
@@ -37,7 +37,7 @@
         android:id="@+id/CurrentGoalPhoto"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:src="@drawable/chickenrice"
+        android:src="@drawable/cutweight"
         android:alpha="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
